MDL-73950 enrol_lti: fix icon spacing in dynamic registration URL

--- a/enrol/lti/styles.css
+++ b/enrol/lti/styles.css
@@ -6,3 +6,6 @@
 form#auto_submit {
     display: none;
 }
+#registration-tab-content .input-group-append a.btn span.pix {
+    padding-left: 0.5rem;
+}
